--- a/ui/package.json
+++ b/ui/package.json
@@ -12,9 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-  	"angular": "^1.5.8",
-  	"bootstrap": "^3.3.7",
-  	"babel-polyfill": "^6.13.0"
+    "angular": "^1.5.8",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.0"
   },
   "devDependencies": {
     "angular-loader": "^1.5.8",
@@ -33,8 +33,9 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
-    "jquery": "^3.1.0",
+    "babel-polyfill": "^6.13.0",
     "lodash": "^4.15.0",
+    "ng-annotate-loader": "^0.1.1",
     "ng-annotate-webpack-plugin": "^0.1.3",
     "ngtemplate-loader": "^1.3.1",
     "node-sass": "^3.9.3",
@@ -45,5 +46,17 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
+   },
+  "standard": {
+    "parser": "babel-eslint",
+    "globals": [
+      "angular"
+    ]
   }
 }
