--- a/ui/package.json
+++ b/ui/package.json
@@ -23,9 +23,11 @@
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "bootstrap-loader": "^2.0.0-beta.11",
+    "checklist-model": "^0.10.0",
     "css-loader": "^0.25.0",
     "devtools": "0.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -33,7 +35,6 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
-    "babel-polyfill": "^6.13.0",
     "lodash": "^4.15.0",
     "ng-annotate-loader": "^0.1.1",
     "ng-annotate-webpack-plugin": "^0.1.3",
@@ -52,7 +53,7 @@
       "es2015",
       "stage-0"
     ]
-   },
+  },
   "standard": {
     "parser": "babel-eslint",
     "globals": [
